--- a/docs/index.css
+++ b/docs/index.css
@@ -10,7 +10,7 @@
     line-height: 0.1;
     
 }
-#download{
+.download_button{
     background-color: #004f69; 
     text-align: center;
     text-decoration: none;
@@ -24,4 +24,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+.img-50procent {
+    width:100px; /* you can use % */
+    height: 100px;
+    height: auto;
 }
